--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "lrodriguez@araujoysegovia.net"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-0": {
